--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --accent-color: #58C9B9; 
     --accent-color-active: #5ad6c6; 
     --bg-color: #F8F9FA;
+    --body-color: #fafcff;
     --text-color: #293241;
 }
 
@@ -20,18 +21,57 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: var(--bg-color);
+    background-color: var(--body-color);
     color: var(--text-color);
     line-height: 1.7;
     margin: 0;
     padding: 0;
 }
 
-.container {
+@keyframes parallax {
+  0%, 4% {
+    background-position: 0 -1%;
+  }
+
+  55% {
+    background-position: 0 50%;
+  }
+
+  100% {
+    background-position: 0 100%;
+  }
+}
+
+#main-content {
     width: 90%;
     max-width: 1100px;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
+
+    background-image: url(./assets/hero.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-clip: var(--bg-color);
+    
+    animation-name: parallax;
+    animation-duration: 1ms; /* Firefox requires this to apply the animation */
+    animation-direction: alternate;
+    animation-timeline: scroll(block);
 }
+.container {
+    width: 100%;
+}
+.hero-section {
+  display: grid;
+  position: relative;
+  margin-top: calc(125% * 0.25);
+  height: 30vh;
+  max-height: 300px;
+  backdrop-filter: blur(4px);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.308), rgba(255, 255, 255, 0.308) 80%, var(--bg-color));
+}
+
 
 h1, h2, h3 {
     font-weight: 700;
@@ -114,7 +154,8 @@ h1, h2, h3 {
 
 /* Service Sections (Full-width articles) */
 .service-section {
-    padding: 6rem 0;
+    padding: 6rem 1rem;
+    background-color: var(--bg-color);
 }
 
 .service-section.alt-bg {
@@ -160,7 +201,6 @@ h1, h2, h3 {
 .contact-section {
     padding: 6rem 0 2rem 0;
     text-align: center;
-    background-color: #fff;
 }
 
 .section-title {
@@ -177,11 +217,14 @@ h1, h2, h3 {
     margin-bottom: 3rem;
 }
 
+
+.contact-section
 .contact-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
     text-align: left;
+    padding-inline: 1rem;
 }
 
 .contact-card {
@@ -220,7 +263,6 @@ h1, h2, h3 {
 /* Address & Map Section */
 #address-map-section {
     padding: 0.25rem 0 .5rem 0;
-    background-color: #fff;
 }
 
 .address-map-grid {
@@ -263,6 +305,11 @@ h1, h2, h3 {
     padding: 2rem 0;
     background-color: #e9ecef;
     font-size: 0.9rem;
+}
+
+.transparent-subtle {
+  background-color: #ffffffef;
+  backdrop-filter: blur(2px);
 }
 
 /* Responsive Design */
