--- a/style.css
+++ b/style.css
@@ -28,30 +28,12 @@ body {
     padding: 0;
 }
 
-@keyframes parallax {
-  0%, 4% {
-    background-position: 0 -1%;
-  }
-
-  55% {
-    background-position: 0 50%;
-  }
-
-  100% {
-    background-position: 0 100%;
-  }
-}
-
 #main-content {
-    width: 90%;
     max-width: 1100px;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
 
-    background-image: url(./assets/hero.webp);
-    background-size: contain;
-    background-repeat: no-repeat;
     background-clip: var(--bg-color);
     
     animation-name: parallax;
@@ -65,11 +47,20 @@ body {
 .hero-section {
   display: grid;
   position: relative;
-  margin-top: calc(125% * 0.25);
-  height: 30vh;
-  max-height: 300px;
-  backdrop-filter: blur(4px);
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.308), rgba(255, 255, 255, 0.308) 80%, var(--bg-color));
+  width:100%;
+  aspect-ratio: 4/3;
+  background-image: url(./assets/hero.webp);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.hero-section .content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 50%;
+  padding: 8px 8px 0 0;
 }
 
 
@@ -86,6 +77,8 @@ h1, h2, h3 {
     position: sticky;
     top: 0;
     z-index: 10;
+    max-width: 1100px;
+    margin: 0 auto;
     box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
 .main-header .container {
@@ -120,6 +113,7 @@ h1, h2, h3 {
     gap: 1.5rem;
     margin: 0;
     padding: 0;
+    padding-right: 0.5rem;
 }
 
 .nav-links li {
@@ -138,7 +132,7 @@ h1, h2, h3 {
 }
 
 
-.nav-links a.sm-only {
+.nav-links .sm-only {
     display: none;
 }
 
@@ -154,7 +148,7 @@ h1, h2, h3 {
 
 /* Service Sections (Full-width articles) */
 .service-section {
-    padding: 6rem 1rem;
+    padding: 3rem 1rem;
     background-color: var(--bg-color);
 }
 
@@ -167,7 +161,7 @@ h1, h2, h3 {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "icon text";
     align-items: center;
-    gap: 4rem;
+    gap: 3rem;
 }
 
 .service-text {
@@ -199,7 +193,7 @@ h1, h2, h3 {
 
 /* Contact Section */
 .contact-section {
-    padding: 6rem 0 2rem 0;
+    padding: 3rem 0 2rem 0;
     text-align: center;
 }
 
@@ -312,6 +306,12 @@ h1, h2, h3 {
   backdrop-filter: blur(2px);
 }
 
+@media screen and (max-width: 1100px) {
+  #main-content {
+    padding-inline: 8px;
+  }
+}
+
 /* Responsive Design */
 @media (max-width: 900px) {
     #main-content {
@@ -339,9 +339,18 @@ h1, h2, h3 {
         margin-bottom: 2rem;
         order: -1; /* Always place icon on top on mobile */
     }
-
-    .address-details {
-        margin-bottom: 2rem;
+    
+    .address-details-container {
+        width: 100%;
+        max-width: 100%;
+        min-width: none;
+        order: 100
+    }
+    .address-map-grid {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 0.5rem;
     }
 }
 
@@ -354,6 +363,7 @@ h1, h2, h3 {
     }
     .nav-links {
         padding-top: 0.5rem;
+        padding-right: 0;
         flex-direction: column;
         align-items: start;
         position: fixed;
@@ -384,7 +394,7 @@ h1, h2, h3 {
         display: block; /* Show backdrop when menu is open */
     }
     .service-section {
-        padding: 4rem 0 0 0;
+        padding: 3rem 0 0 0;
     }
     .service-grid,
     .alt-bg .service-grid {
@@ -398,31 +408,19 @@ h1, h2, h3 {
         gap: 1rem;
     }
 
-    .nav-links a.sm-only {
+    .nav-links .sm-only {
         display: block;
     }
 
-    .address-map-grid {
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        gap: 0.5rem;
-    }
-    .address-details-container {
-        width: 100%;
-        max-width: 100%;
-        min-width: none;
-        order: 100
-    }
     #address-map-section {
-        padding-top: 4rem;
+        padding-top: 3rem;
     }
 }
 
 
 /* Styling for the gallery section */
 .gallery-section {
-    padding: 4rem 0;
+    padding: 3rem 0;
     text-align: center;
 }
 
